package a1.impl.Model.ModelInterfaces;

import a1.impl.Model.StateModel.StateInterface;

public interface BorrowableMaterialInterface {
    public void updateState(StateInterface newState);
}
