package a1.impl.Model;

public class Settings {

    public static int borrowDayMaxLength = 30;
    public static int maxQueueLength = 5;
}
