' Generated by UML Generator
' Encoded: pLTjJzim4FxUN-6FwQ08QTgNQaCKqAHAC3OGe6cQ9ZS-KckfKzbkIyVuxplRUR4J5oYR9hu4SlVuNfuxNww7IbEf5xEyftvoCQUIpaYQKwL6Mai-MMWOfuMuvB-0xFUcd059kKnpwFKiYepcyvodL7C46KlalaV8JbkQz8tq7drfdZwG6UKYeJ9JGtA9NaJsxNj_I9O5Pxs7ol1H8MMnGjqP5JG3QGqFbboiyrEkz92Ov_jhytv0FX01ApAIaguziVKwA2OA99xBhl2lT_JSbtTDX6fdQc2oQ0UMBEOCqnBPSI6qBF8Sv91STMIM0SgO3IrP3edzfqeRTHdewogxf1_aPzJM2zXtf5H3OgaOiuh2NHE_rHW9_XaB3VAMfk3vO5nXDGMascILBF3HMF1mL6kOpNMTQjVPKqSlmD1dEs2RmumvtXtjDa0a4vyUICAiM49GdpXG59hVhaTv7c1Laawfo82DJvxF7RObhsHbQz993cU8bPpcDTwrlwkLAzCBB3UzrRBxV-bXBwGdCESJyaBBRXvSWZONIZc3zIYPMCPEwFgCtfs2oFHqI30KlCvlzripv-xB0XOGWjwr1mum6uURDiLA6DvShAq1K08JY_6QkRpAvqPihd5zUASGxkJ8tP3kxPiKHGvKEEo5BME5xMhhwnM1r3bzb01DFZlrQ_AwmdImPr0V05yhzSrD25lQrM3RK1vpzcIq4JPgqklREGX3C191P-2_vmLbmAwt__ZQgjaHv9kiAlK9PM6XK3XceUWVp0uRaSkrdPa4v4h1Lw3IpWGZmuN59jcWUC2EcpaWVpHYGy8Ypvr5swCRjEb2IX0w6dV9P7XB7OLkQ_23toNjq7T967X_sq-HuxzqtGOPhQgqwcaptTggKXXqGd2cNNfbHPp5qKTD6Jh7V5saNA6XYwPY7KE-BbBPJgiTvnpB6-oizISejJfSUe-B-VfSt4YkeRasdz6Ujh9w6utY_9jLcyRDm7bELjR2a7Zcl6ph0svBsExCHE8OI2ckfpDG2XDiUX6MQ2TMs6RST3RYlrqDN86kxF3QlCeg4EncYXCnMPbdPtnvWNP-Skpj_JxOl9DrySLWu6PDN1KiHZ5l1-qx5yLiFjtbkFVOhleCXo4uwlbHU-4kkD5XzUctXBSGpGuJquQhGmnHUaP5oB-LDnNR5A3xTdYT4EMoXBr1SstttRwF1HD3TM8vn5x6d-f_00
' URL: http://www.plantuml.com/plantuml/uml/pLTjJzim4FxUN-6FwQ08QTgNQaCKqAHAC3OGe6cQ9ZS-KckfKzbkIyVuxplRUR4J5oYR9hu4SlVuNfuxNww7IbEf5xEyftvoCQUIpaYQKwL6Mai-MMWOfuMuvB-0xFUcd059kKnpwFKiYepcyvodL7C46KlalaV8JbkQz8tq7drfdZwG6UKYeJ9JGtA9NaJsxNj_I9O5Pxs7ol1H8MMnGjqP5JG3QGqFbboiyrEkz92Ov_jhytv0FX01ApAIaguziVKwA2OA99xBhl2lT_JSbtTDX6fdQc2oQ0UMBEOCqnBPSI6qBF8Sv91STMIM0SgO3IrP3edzfqeRTHdewogxf1_aPzJM2zXtf5H3OgaOiuh2NHE_rHW9_XaB3VAMfk3vO5nXDGMascILBF3HMF1mL6kOpNMTQjVPKqSlmD1dEs2RmumvtXtjDa0a4vyUICAiM49GdpXG59hVhaTv7c1Laawfo82DJvxF7RObhsHbQz993cU8bPpcDTwrlwkLAzCBB3UzrRBxV-bXBwGdCESJyaBBRXvSWZONIZc3zIYPMCPEwFgCtfs2oFHqI30KlCvlzripv-xB0XOGWjwr1mum6uURDiLA6DvShAq1K08JY_6QkRpAvqPihd5zUASGxkJ8tP3kxPiKHGvKEEo5BME5xMhhwnM1r3bzb01DFZlrQ_AwmdImPr0V05yhzSrD25lQrM3RK1vpzcIq4JPgqklREGX3C191P-2_vmLbmAwt__ZQgjaHv9kiAlK9PM6XK3XceUWVp0uRaSkrdPa4v4h1Lw3IpWGZmuN59jcWUC2EcpaWVpHYGy8Ypvr5swCRjEb2IX0w6dV9P7XB7OLkQ_23toNjq7T967X_sq-HuxzqtGOPhQgqwcaptTggKXXqGd2cNNfbHPp5qKTD6Jh7V5saNA6XYwPY7KE-BbBPJgiTvnpB6-oizISejJfSUe-B-VfSt4YkeRasdz6Ujh9w6utY_9jLcyRDm7bELjR2a7Zcl6ph0svBsExCHE8OI2ckfpDG2XDiUX6MQ2TMs6RST3RYlrqDN86kxF3QlCeg4EncYXCnMPbdPtnvWNP-Skpj_JxOl9DrySLWu6PDN1KiHZ5l1-qx5yLiFjtbkFVOhleCXo4uwlbHU-4kkD5XzUctXBSGpGuJquQhGmnHUaP5oB-LDnNR5A3xTdYT4EMoXBr1SstttRwF1HD3TM8vn5x6d-f_00
' Generated on: 2026-03-09T14:41:51.973721600

@startuml
skinparam classAttributeIconSize 0
hide circle

class ApplicationStart {
  +ApplicationStart()
  +{static} main(args: String[]): void
}

class BorrowingManager {
  -vinylList: List<Vinyl> = new ArrayList<Vinyl>()
  -observingUserList: List<ObservingUser> = new ArrayList<ObservingUser>()
  --
  +BorrowingManager(updatingController: UpdatingController)
  +addVinyl(v: Vinyl): void
  +getVinylList(): List<Vinyl>
  +updateVinylState(vinylId: String, newState: StateInterface): void
  +disconnectUser(userId: String): void
  +attemptBorrowing(vinylId: String, userId: String): void
  +attemptReservation(vinylId: String, userId: String): void
  +addObservngUser(user: User): void
  +removeObservingUser(user: User): void
  +notifyAllObservingUsers(changedID: String, newState: StateInterface): void
}

interface BorrowableMaterialInterface {
  +updateState(newState: StateInterface): void
}

interface BorrowingManagerInterface {
  +addObservngUser(user: User): void
  +removeObservingUser(user: User): void
  +notifyAllObservingUsers(changedId: String, newState: StateInterface): void
}

interface ObservingUser {
  +update(changedId: String, newState: StateInterface): void
}

class Settings {
  +{static} borrowDayMaxLength: int = 30
  +{static} maxQueueLength: int = 5
}

class BorrowedState {
  -owner: String
  --
  +BorrowedState(ownerId: String)
  +getOwner(): String
  +onBorrowAttempt(userId: String): boolean
  +onRemoveAttempt(): boolean
  +onReservationAttempt(): boolean
}

class FreeState {
  +FreeState()
  +getOwner(): String
  +onBorrowAttempt(userId: String): boolean
  +onRemoveAttempt(): boolean
  +onReservationAttempt(): boolean
}

class ReservedState {
  -owner: String
  --
  +ReservedState(ownerId: String)
  +getOwner(): String
  +onBorrowAttempt(userId: String): boolean
  +onRemoveAttempt(): boolean
  +onReservationAttempt(): boolean
}

interface StateInterface {
  +onBorrowAttempt(userId: String): boolean
  +onReservationAttempt(): boolean
  +onRemoveAttempt(): boolean
  +getOwner(): String
}

class User {
  -userId: String
  -name: String
  -loadedVinylList: List<Vinyl> = new ArrayList<Vinyl>()
  --
  +User(name: String)
  +getName(): String
  +getId(): String
  +update(changedId: String, newState: StateInterface): void
}

class Vinyl {
  -name: String
  -releaseYear: int
  -artist: String
  -id: String
  -borrower_id: String = null
  -reserver_id: String = null
  -currentState: StateInterface = new FreeState()
  --
  +Vinyl(name: String, releaseYear: int, artist: String)
  +updateState(newState: StateInterface): void
  +getState(): StateInterface
  +setState(state: StateInterface): void
  +getName(): String
  +setName(name: String): void
  +getId(): String
  +setId(id: String): void
  +getBorrower_id(): String
  +setBorrower_id(borrower_id: String): void
  +getReserver_id(): String
  +setReserver_id(reserver_id: String): void
}

class ClientManager {
  -{static} clients: CopyOnWriteArrayList<PrintWriter> = new CopyOnWriteArrayList<>()
  --
  +{static} addClient(writer: PrintWriter): void
  +{static} removeClient(writer: PrintWriter): void
  +{static} broadcast(message: String, eventname: String): void
}

class UpdatingController {
  +update(changedId: String, newState: StateInterface): void
  +setUserId(userId: String): void
  +sendWhole(wholeList: List<Vinyl>): void
}

BorrowingManager ..|> BorrowingManagerInterface
BorrowingManager o-- Vinyl
BorrowingManager o-- ObservingUser
BorrowingManager ..> StateInterface
BorrowingManager ..> User
BorrowingManager ..> UpdatingController
BorrowableMaterialInterface ..> StateInterface
BorrowingManagerInterface ..> User
BorrowingManagerInterface ..> StateInterface
ObservingUser ..> StateInterface
BorrowedState ..|> StateInterface
FreeState ..|> StateInterface
ReservedState ..|> StateInterface
User ..|> ObservingUser
User o-- Vinyl
User ..> StateInterface
Vinyl ..|> BorrowableMaterialInterface
Vinyl *-- StateInterface
UpdatingController ..|> ObservingUser
UpdatingController ..> StateInterface
@enduml